--- a/projects/systelab-components/sass/modern/_dropdown.scss
+++ b/projects/systelab-components/sass/modern/_dropdown.scss
@@ -57,8 +57,7 @@
       text-decoration: none;
 
       &:hover {
-        background-color: var(--primary);
-        color: white;
+        background-color: var(--slab_table_row_hover_background);
         text-decoration: none;
       }
 
@@ -69,7 +68,6 @@
         &:hover {
           background-color: initial;
           text-decoration: none;
-          color: white;
         }
       }
 
